# sdl3_project

./: CMakeLists.txt
include/: animation.h  app.h  assetManager.h  common.h  entity.h  player.h  texture.h
src/: animation.cpp  app.cpp  assetManager.cpp  main.cpp  player.cpp  texture.cpp
tests/: t_assetManager.cpp  test.cpp
